--- a/capstone-deploy.yml
+++ b/capstone-deploy.yml
@@ -38,8 +38,12 @@ spec:
   type: LoadBalancer
   selector:
     app: capstonefola
-  ports:
-    - port: 80
-      targetPort: 80
-      nodePort: 30000
+  ports: 
+    - name: http
       protocol: TCP
+      port: 9080
+      targetPort: 9080
+    - name: https
+      protocol: TCP
+      port: 443
+      targetPort: 443
